<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <groupId>gov.nist.toolkit</groupId>
        <artifactId>tk-deps</artifactId>
        <version>7.11.0-SNAPSHOT</version><!-- xdstk -->
        <relativePath>../tk-deps/pom.xml</relativePath>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>it-tests</artifactId>

    <dependencies>
        <dependency>
            <groupId>gov.nist.toolkit</groupId>
            <artifactId>it-support</artifactId>
        </dependency>
        <dependency>
            <groupId>gov.nist.toolkit</groupId>
            <artifactId>toolkit-services-common</artifactId>
        </dependency>
        <dependency>
            <groupId>gov.nist.toolkit</groupId>
            <artifactId>results</artifactId>
        </dependency>
        <dependency>
            <groupId>gov.nist.toolkit</groupId>
            <artifactId>session</artifactId>
        </dependency>
        <dependency>
            <groupId>gov.nist.toolkit</groupId>
            <artifactId>toolkit-services</artifactId>
        </dependency>
        <dependency>
            <groupId>gov.nist.toolkit</groupId>
            <artifactId>toolkit-api</artifactId>
        </dependency>
        <dependency>
            <groupId>gov.nist.toolkit</groupId>
            <artifactId>simulators</artifactId>
        </dependency>
        <dependency>
            <groupId>gov.nist.toolkit</groupId>
            <artifactId>transaction-notification-service</artifactId>
        </dependency>
        <dependency>
            <groupId>gov.nist.toolkit</groupId>
            <artifactId>interaction-model</artifactId>
        </dependency>
        <dependency>
            <groupId>gov.nist.toolkit</groupId>
            <artifactId>grizzly-support</artifactId>
        </dependency>

        <dependency>
            <groupId>org.glassfish.jersey.containers</groupId>
            <artifactId>jersey-container-grizzly2-http</artifactId>
        </dependency>
        <dependency>
            <groupId>org.glassfish.grizzly</groupId>
            <artifactId>grizzly-http-servlet-server</artifactId>
        </dependency>
        <dependency>
            <groupId>org.glassfish.grizzly</groupId>
            <artifactId>grizzly-framework</artifactId>
        </dependency>
        <dependency>
            <groupId>org.glassfish.grizzly</groupId>
            <artifactId>grizzly-http-server-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.glassfish.jersey.media</groupId>
            <artifactId>jersey-media-json-jackson</artifactId>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
        </dependency>
        <dependency>
            <groupId>org.spockframework</groupId>
            <artifactId>spock-core</artifactId>
        </dependency>
        <dependency>
            <groupId>com.google.gwt</groupId>
            <artifactId>gwt-user</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.axis2</groupId>
            <artifactId>axis2-transport-http</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.axis2</groupId>
            <artifactId>axis2-transport-tcp</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.axis2</groupId>
            <artifactId>axis2-transport-local</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.axis2</groupId>
            <artifactId>axis2-adb</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.axis2</groupId>
            <artifactId>axis2-kernel</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.axis2</groupId>
            <artifactId>axis2</artifactId>
        </dependency>
<!--        <dependency>-->
<!--            <groupId>gov.nist.toolkit</groupId>-->
<!--            <artifactId>fhir</artifactId>-->
<!--        </dependency>-->

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-csv</artifactId>
        </dependency>


        <!-- These two needed by dcm4che -->
        <!--
        Regarding log4j usage and the CVE2021-44228,
        See http://www.slf4j.org/docs.html
        and http://www.slf4j.org/log4shell.html
        -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>
        <!-- Ralph added: needed to mock non-interface types -->
        <dependency>
            <groupId>cglib</groupId>
            <artifactId>cglib-nodep</artifactId>
            <version>3.2.4</version>
        </dependency>


        		<!-- https://mvnrepository.com/artifact/javax.xml.soap/javax.xml.soap-api -->
<!--        		<dependency>-->
<!--        			<groupId>javax.xml.soap</groupId>-->
<!--        			<artifactId>javax.xml.soap-api</artifactId>-->
<!--        		</dependency>-->

<!--                <dependency>-->
<!--                    <groupId>javax.xml.bind</groupId>-->
<!--                    <artifactId>jaxb-api</artifactId>-->
<!--                </dependency>-->
<!--                <dependency>-->
<!--                    <groupId>com.sun.xml.bind</groupId>-->
<!--                    <artifactId>jaxb-core</artifactId>-->
<!--                </dependency>-->
<!--                <dependency>-->
<!--                    <groupId>com.sun.xml.bind</groupId>-->
<!--                    <artifactId>jaxb-impl</artifactId>-->
<!--                </dependency>-->
        <dependency>
            <groupId>com.sun.xml.bind</groupId>
            <artifactId>jaxb-impl</artifactId>
            <version>2.3.8</version>
        </dependency>
        <dependency>
            <groupId>com.sun.xml.messaging.saaj</groupId>
            <artifactId>saaj-impl</artifactId>
            <version>1.5.1</version>
        </dependency>
    </dependencies>

    <profiles>
    <profile>
        <id>Integration-Tests</id>
        <activation>
            <activeByDefault>false</activeByDefault>
        </activation>
        <!--<modules>-->
        <!--<module>it-tests</module>-->
        <!--</modules>-->
        <build>
            <plugins>
                <!--
                <plugin>
                    <groupId>gov.nist.toolkit</groupId>
                    <artifactId>it-tests-maven-plugin</artifactId>
                    <configuration>
                        <warHome>${basedir}/target/test-classes/war</warHome>
                        <ecDir>${basedir}/target/test-classes/external_cache</ecDir>
                        <axis2>${basedir}/target/test-classes/axis2.xml</axis2>
                    </configuration>
                    <executions>
                        <execution>
                            <id>prepTestEnv</id>
                            <goals>
                                <goal>start</goal>
                                <goal>stop</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                -->

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>2.19.1</version>
                    <configuration>
                        <includes>
<!--                            <include>**/OdConsumerSpec.java</include>-->
                            <!--<include>**/StsSamlAssertionSpec.java</include>-->
                            <!--<include>**/FhirSupportOrchestrationBuilderSpec.java</include>-->

                            <include>**/*Spec.java</include>
                            <include>**/*Test.java</include>
                            <include>**/*IT.java</include>
                            <!-- end include all tests -->
                        </includes>
                        <!-- Exclude tests that disturb other tests or require to be run in complete isolation. -->
                        <excludes>
<!--                            <exclude>**/StsSamlAssertionSpec.java</exclude>-->
                            <!-- Begin exclude XDS-I IT Tests not supported in Toolkit -->
                            <!-- img folder -->
                            <!-- End exclude XDS-I IT Tests not supported in Toolkit -->
                        </excludes>
                        <!--<parallel>classes</parallel>-->
                        <!--<runOrder>alphabetical</runOrder>-->
                        <!--<useUnlimitedThreads>true</useUnlimitedThreads>-->
                        <!--<redirectTestOutputToFile>true</redirectTestOutputToFile>-->
                        <forkCount>1</forkCount>
                        <reuseForks>false</reuseForks>
                        <!-- We should NOT ignore IT test failures. TestFailureIgnore should be false. -->
                        <testFailureIgnore>false</testFailureIgnore>
                        <argLine>
                        --add-opens=java.base/java.lang=ALL-UNNAMED             --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
                        </argLine>
                    </configuration>
                    <executions>
                        <execution>
                            <goals>
                                <goal>integration-test</goal>
                                <goal>verify</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.gmavenplus</groupId>
                    <artifactId>gmavenplus-plugin</artifactId>
                    <version>1.6.2</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>addTestSources</goal>
                                <goal>compileTests</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${mavenCompilerPluginVersion}</version>
                    <configuration>
                        <source>8</source>
                        <target>8</target>
                        <compilerArgument>-Xms1024m -Xmx1024m -XX:MaxPermSize=256m --add-exports=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED	--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED</compilerArgument>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>build-helper-maven-plugin</artifactId>
                    <executions>
                        <execution>
                            <id>add-groovy-test-source</id>
                            <phase>integration-test</phase>
                            <goals>
                                <goal>add-test-source</goal>
                            </goals>
                            <configuration>
                                <sources>
                                    <source>${basedir}/src/test/groovy</source>
                                </sources>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </build>
    </profile>
    </profiles>


    <build>
        <plugins>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.20</version>
                <configuration>
                    <skipTests>true</skipTests> <!-- We are using Failsafe instead of Surefire, so just set skipTests to true. Otherwise Surefire likes to automatically run all tests that have *Test in the class names in the Unit test phase. -->
                    <systemPropertyVariables>
                        <propertyName>java.util.logging.config.file</propertyName>
                        <propertyValue>${basedir}/../logging.properties</propertyValue>
                    </systemPropertyVariables>
                </configuration>
            </plugin>

        </plugins>
    </build>
</project>
